# travel

./: .gitignore  FixErrorInstallBack.md  LICENSE  README.md  mockData.ts  package-lock.json  package.json  telegram-bot.js  vite.config.ts
api/: .env  .env.sample  Makefile  database.db  pyproject.toml
api/app/: alembic.ini  database.db  main.py  settings.py
api/app/alembic/: env.py
api/app/alembic/versions/: 1e037bc1c585_.py  1f8616a00c6e_.py  46689b75eb11_.py  5ecbfdea17cd_added_account_table.py  636a926267a6_added_account_table.py  6b44a0936af3_.py  764d968f88ee_.py  7e7beb04c6c3_.py  92932ea07ac2_.py  9428dcc2fd35_added_account_table.py  a12802c689e2_.py  ab83b2e4e0fe_.py  cbe074789acc_.py  (+5 more)
api/app/authentication/: create_superuser.py  strategyy.py  transport.py  user_manager.py
api/app/database/: database.py  engine.py  session.py
api/app/dependencies/: check_box.py  clothes.py  ticks.py
api/app/migrations/: env.py
api/app/models/: blog.py  choices.py  model.py  models.py  token.py  tokens.py  users.py
api/app/repository/: views_repository.py
api/app/routers/: __init__.py  blog.py  check_box.py  choices.py  clothes.py  roles.py  ticks.py  users.py  views.py
api/app/schemas/: base.py  blog.py  check_box.py  choices.py  clothes.py  enums.py  roles.py  schemas.py  ticks.py  user.py  users.py
api/app/services/: blog_services.py  check_box_services.py  choice_services.py  clothes_services.py  roles_services.py  ticks_service.py
api/tests/: conftest.py  test_app.py  test_check_list.py  test_steps.py
api/tests/testlib/: dataclasses.py  utils.py
(+247 files in other folders)
